gatekeeper/limits_requests/disallow3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: opa-disallowed-3
  labels:
    owner: me.agilebank.demo
spec:
  containers:
  - name: opa
    image: openpolicyagent/opa:0.9.2
    args:
      - "run"
      - "--server"
      - "--addr=localhost:8080"
    resources:
      requests:
        cpu: "100m"
