gatekeeper/limits_requests/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequirelimitsrequests
  annotations:
    description: >-
      Requires pods to specify a resorce requests and limits.
spec:
  crd:
    spec:
      names:
        kind: k8srequirelimitsrequests
      validation:
        # Schema for the `parameters` field
        openAPIV3Schema:
          type: object
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequirelimitsrequests

        missing(obj, field) = true {
          not obj[field]
        }
        
        missing(obj, field) = true {
          obj[field] == ""
        }

        violation[{"msg": msg}] {
            container := input.review.object.spec["containers"][_]
            not count(container.resources) > 0 # resources is automatically created empty if it does not exist
            msg := "resources not specified in spec.containers"
        }

        violation[{"msg": msg}] {
            container := input.review.object.spec["containers"][_]
            not container.resources.limits
            msg := "limits not specified in spec.containers.resources"
        }

        violation[{"msg": msg}] {
            container := input.review.object.spec["containers"][_]
            not container.resources.requests
            msg := "requests not specified in spec.containers.resources"
        }

        violation[{"msg": msg}] {
            container := input.review.object.spec["containers"][_]
            not container.resources.requests.cpu
            msg := "cpu not specified in spec.containers.resources.requests"
        }

        violation[{"msg": msg}] {
            container := input.review.object.spec["containers"][_]
            not container.resources.requests.memory
            msg := "memory not specified in spec.containers.resources.requests"
        }

        violation[{"msg": msg}] {
            container := input.review.object.spec["containers"][_]
            not container.resources.limits.cpu
            msg := "cpu not specified in spec.containers.resources.limits"
        }

        violation[{"msg": msg}] {
            container := input.review.object.spec["containers"][_]
            not container.resources.limits.memory
            msg := "memory not specified in spec.containers.resources.limits"
        }
